Fix the assertion smells and the deprecated boxing constructors
- EqualsAndHashCodeTest: assertFalse(a.equals(b)) rewritten as
  assertNotEquals(a, b), which exercises the same equals calls (S5785)
- new Integer(...) and new Double(...), deprecated for removal, replaced
  with the valueOf equivalents in all the tests (S5738); in Issue87 the
  String variant keeps throwing NumberFormatException as the test needs
- IsolatedClassLoader.readClassResource rewritten with
  try-with-resources (S2093)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>